--- a/animation.html
+++ b/animation.html
@@ -11,12 +11,17 @@ width: 60px;
 height: 60px;
 border-radius: 50%;
 background-color: yellow;
+position: absolute;
         }
         .field{
             width: 100%;
             height:300px;
             background-color: lightblue;
+            position: relative;
         }
+        .field:hover .ball{
+           animation: style 3s ease-in-out 1s infinite alternate;
+       }
        @keyframes style {
            0%{
                left: 0;
@@ -36,9 +41,7 @@ background-color: yellow;
            }
            
        }
-       .field:hover .ball{
-           animation: style 3s ease-in-out 1s infinite alternate;
-       }
+       
     </style>
 </head>
 <body>
