--- a/grid.html
+++ b/grid.html
@@ -8,6 +8,7 @@
         .grid{
             display: grid;
             grid-template-columns: repeat(3,1fr); /*or grid-template-columns;120px 120px 130px; */
+            grid-gap: 20px;
            
         }
     </style>
